--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 
 .DS_Store
 /Notes
+**/Scratch
 
 ## User settings
-xcuserdata/
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
@@ -47,7 +47,7 @@ playground.xcworkspace
 #
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
-# .swiftpm
+.swiftpm
 
 .build/
 
