improve ignored dirs

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
-.DS_Store
-/Notes
+## User settings
+**/.DS_Store
+**/Notes
 **/Scratch
 
-## User settings
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
